# OpenCV

./: CMakeLists.txt
Install/: Install.cmd  Install100.vcxproj  Install140.vcxproj  Install140.vcxproj.filters  Install142.vcxproj  ReadMe.txt
OpenCV/: CMakeLists.txt
OpenCV/Include/: OpenCVExport.h
UnitTest/: CMakeLists.txt
UnitTest/src/: UnitCMake_Project.cpp
